    which resuilted in anim times like -32 instead of between 0 and 2 seconds, 
    for example.  This threw the bone extrapolations way off and made the model
    look like garbage until the anim time got back in the right zone. (Keith Fulton)
  - GNU/Linux compilation / packaging fixes (-DCAL_16BIT_INDICES is included if
    relevant in the .pc)
	
o-----------------------------------------------------------------------------o
| Version 0.10.0 ( 12 january 2005) 
o-----------------------------------------------------------------------------o
  
  - CalModel::setAbstractMixer and CalAbstractMixer to enable third
    party mixers.
  - Symbolic names for coreMaterial, coreMesh, coreAnimations loaded
    by coremodel.{h,cpp}
  - Add functions to control force of the spring system
  - CalHardwareModel : a object to store and to compute information
    needed to do hardware vertex skinning.
  - Add a time factor to allow reverse time of sync animation.
  - Most of the math functions are now inline.  
  - Add an option to stop a action animation at the end.
  - Add functions to rescale a core model, 
    but this can be done only before creating the CalModel.
  - Fix in the XML loader
  - Add a function to compute the global bounding box of the model.
  - Rename calculateBoundingBox to calculateBoundingBoxes.
  - Add reference counting. Core* objects can be
    now shared between several coremodel correctly.
  - Modify the XML file format to be XML valid
  - Added animation callbacks.
  - Added Maya exporter.
  - create/destroy functions removed.
  - Add a "stride" argument to getVertices(), getNormals() ...
  
o-----------------------------------------------------------------------------o
| Version 0.9.1 ( 29. November 2003) 
o-----------------------------------------------------------------------------o
  - Modifications to the loader to accomplish the 
    X axis (Y/Z) rotation from Keith Fulton <keith@paqrat.com>