@@ -4,7 +4,7 @@
 # General configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = Cal3D
-PROJECT_NUMBER         = 0.9
+PROJECT_NUMBER         = 0.11
 OUTPUT_DIRECTORY       = ./
 OUTPUT_LANGUAGE        = English
 EXTRACT_ALL            = NO
